# council

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ping-spaces.yml
agents/: .gitignore  Dockerfile  Procfile  pyproject.toml
agents/anesthesia-agent/: pyproject.toml
agents/anesthesia-agent/src/anesthesia_agent/: __init__.py  agent.py  app.py
agents/cardiology-agent/: pyproject.toml
agents/cardiology-agent/src/cardiology_agent/: __init__.py  agent.py  app.py
agents/convener/: pyproject.toml
agents/convener/src/convener/: __init__.py  agent.py  app.py  peer_fanout.py
agents/endocrine-agent/: pyproject.toml
agents/endocrine-agent/src/endocrine_agent/: __init__.py  agent.py  app.py
agents/nephrology-agent/: pyproject.toml
agents/nephrology-agent/src/nephrology_agent/: __init__.py  agent.py  app.py
agents/obstetrics-agent/: pyproject.toml
agents/obstetrics-agent/src/obstetrics_agent/: __init__.py  agent.py  app.py
agents/oncology-agent/: pyproject.toml
agents/oncology-agent/src/oncology_agent/: __init__.py  agent.py  app.py
agents/pediatrics-agent/: pyproject.toml
agents/pediatrics-agent/src/pediatrics_agent/: __init__.py  agent.py  app.py
agents/psychiatry-agent/: pyproject.toml
agents/psychiatry-agent/src/psychiatry_agent/: __init__.py  agent.py  app.py
agents/shared/: pyproject.toml
agents/shared/src/council_shared/: __init__.py  app_factory.py  audit.py  card_factory.py  config.py  fhir_hook.py  mcp_client.py  middleware.py  models.py  sentry_init.py  specialty_agent.py  specialty_app.py
agents/shared/tests/: test_card_factory.py  test_fhir_hook.py
docs/: brainx-clinician-review-post.md  demo-dialogue.md  demo-video-shot-list.md  devpost-submission.md  end-to-end-submission-test.md  marketplace-listings.md
docs/journey/: 00-overview.md  01-setup-and-infrastructure.md  02-llm-vendor-saga.md  03-po-platform-compatibility.md  04-a2a-protocol-quirks.md  05-fhir-and-sharp.md  06-audit-pipeline.md  07-the-60s-ceiling.md  08-hosting-and-quota.md  09-process-and-strategic.md  10-architectural-decisions.md  DEVPOST-CHALLENGES.md  README.md
fhir-bundles/: README.md  build.py
fhir-bundles/bundles/: sarah.json
scripts/: deploy_cloud_run.sh  deploy_hf_spaces.py
supabase/: config.toml
supabase/migrations/: 20260427000000_initial_schema.sql  20260428010000_relax_audit_constraints.sql
