[project]
name = "council"
version = "0.1.0"
description = "The Council — A2A specialty convening for patients with too many doctors."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = [
    "agents/shared",
    "agents/convener",
    "agents/cardiology-agent",
    "agents/oncology-agent",
    "agents/nephrology-agent",
    "agents/endocrine-agent",
    "agents/obstetrics-agent",
    "agents/pediatrics-agent",
    "agents/psychiatry-agent",
    "agents/anesthesia-agent",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "honcho>=2.0.0",
    "huggingface-hub>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["agents"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
