[project]
name = "convener"
version = "0.1.0"
description = "Convener agent — facilitates The Council's peer A2A deliberation."
requires-python = ">=3.11,<3.13"
dependencies = [
    "council-shared",
]

[tool.uv.sources]
council-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convener"]
